Ship friends and Agentprint 0.2.1
